# pyfitstat

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/pyfitstat/: fitstat.py
tests/: test_pyfitstat.py
